# write-offs-handler

./: .env.dist  .gitignore  pyproject.toml
docs/: Write-offs.drawio  technical_requirements.md
src/: api.py  exceptions.py  main.py  message_queue.py  models.py  settings.py
src/api/: __init__.py  dependencies.py  errors.py  events.py  ingredients.py  spreadsheets.py  write_offs.py
src/api/routers/: __init__.py  write_offs.py
src/api/schemas/: write_offs.py
src/database/: engine.py  models.py
src/db/: engine.py  message_queue.py  models.py  redis_db.py
src/models/: __init__.py  events.py  ingredients.py  spreadsheets.py  write_offs.py
src/repositories/: __init__.py  base.py  ingredients.py  write_offs.py
src/resources/: events.py  time_helpers.py
src/services/: database_api.py  event_channels.py  external_database.py  logger.py  parsers.py
tests/: test_parsers.py
tests/test_resources/: conftest.py  test_events.py  test_time_helpers.py
